@@ -1,0 +1,17 @@
+package org.mmisw.iserver.gwt.client.rpc;
+
+
+/**
+ * Data Info for the creation of a mapping ontology from the VINE.
+ * 
+ * <p>
+ * NOT IMPLEMENTED YET
+ * 
+ * @author Carlos Rueda
+ */
+public class MappingDataCreationInfo extends DataCreationInfo {
+	private static final long serialVersionUID = 1L;
+	
+	// TODO
+
+}
